--- a/client/package.json
+++ b/client/package.json
@@ -20,9 +20,12 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
-    "ack-angular-webcam": "^1.5.0",
+    "angular2-image-upload": "^1.0.0-rc.0",
+    "angular2-materialize": "^15.1.10",
     "core-js": "^2.4.1",
+    "hammerjs": "^2.0.8",
+    "jquery": "^2.2.4",
+    "materialize-css": "^0.100.2",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
