--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,10 @@
     "express": "^4.16.2",
     "get-image-colors": "^1.8.1",
     "mongodb": "^2.2.33",
-    "mongoose": "^4.13.4"
+    "mongoose": "^4.13.4",
+    "multer": "^1.3.0",
+    "request": "^2.83.0",
+    "serialport": "^6.0.4"
   },
   "devDependencies": {},
   "scripts": {
